Fixed some run errors and updated to nwer postresql jdbc