@@ -139,7 +139,7 @@ public class JSONArray {
 			case ']':
 			case ')':
 				if (q != c) {
-					throw x.syntaxError("Expected a '" + new Character(q) + "'");
+					throw x.syntaxError("Expected a '" + q + "'");
 				}
 				return;
 			default:
@@ -645,7 +645,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(double value) throws JSONException {
-		Double d = new Double(value);
+		Double d = value;
 		JSONObject.testValidity(d);
 		put(d);
 		return this;
@@ -659,7 +659,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -671,7 +671,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(long value) {
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -751,7 +751,7 @@ public class JSONArray {
 	 *             If the index is negative or if the value is not finite.
 	 */
 	public JSONArray put(int index, double value) throws JSONException {
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -769,7 +769,7 @@ public class JSONArray {
 	 *             If the index is negative.
 	 */
 	public JSONArray put(int index, int value) throws JSONException {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -787,7 +787,7 @@ public class JSONArray {
 	 *             If the index is negative.
 	 */
 	public JSONArray put(int index, long value) throws JSONException {
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
